fixing horizontal scrolling on d3

--- a/direction-3/style.css
+++ b/direction-3/style.css
@@ -17,12 +17,12 @@ body {
 }
 
 h1 {
-font-family: "PP Editorial Old";
-text-transform: uppercase;
-font-size: 3.8rem;
-line-height: 100%;
-width: 100vw;
-padding-block: 1rem;
+    font-family: "PP Editorial Old";
+    text-transform: uppercase;
+    font-size: 3.5rem;
+    line-height: 100%;
+    width: 100vw;
+    padding-block: 1rem;
 }
 
 h2 {
